HUE-7908 [frontend] Fix spinner overlay z-index

--- a/desktop/core/src/desktop/static/desktop/less/components/hue-spinner.less
+++ b/desktop/core/src/desktop/static/desktop/less/components/hue-spinner.less
@@ -43,7 +43,7 @@
 }
 
 .hue-spinner-blackout {
-  z-index: 10000;
+  z-index: 999;
   background-color: @cui-white;
 }
 
